# ros2-il-pipeline

./: .gitignore  PLAN.md  Projektübersicht.md  README.md  RUNBOOK.md  WORKSTATION_RUNBOOK.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data_logger.yaml  inference.yaml  launch_pipeline.py  training_act.yaml
docs/: 01_concept.md  01_technical_concept.md  02_architecture.md  02_architecture_diagrams.md  03_api.md  03_api_specification.md  04_dataset.md  04_dataset_schema.md  05_evaluation_results.md  05_results.md  06_demo_storyboard.md  api.md  concept.md  results.md
il_pipeline/: package.xml  setup.cfg  setup.py
il_pipeline/il_pipeline/: __init__.py
il_pipeline/il_pipeline/dataset/: frame_validator.py  lerobot_writer.py
il_pipeline/il_pipeline/inference/: normaliser.py  policy_loader.py
il_pipeline/il_pipeline/nodes/: data_logger_node.py  inference_node.py  pybullet_robot_node.py
il_pipeline/il_pipeline/training/: lerobot_torch_dataset.py  train.py
il_pipeline/il_pipeline/web_api/: app.py  ros_bridge.py
il_pipeline/launch/: pipeline.launch.py
il_pipeline_msgs/: CMakeLists.txt  package.xml
il_pipeline_msgs/action/: Training.action
il_pipeline_msgs/msg/: EpisodeStatus.msg  TrainingProgress.msg
il_pipeline_msgs/srv/: LoadPolicy.srv  StartEpisode.srv  StopEpisode.srv
scripts/: _camera_test.sh  _debug_bc_v2.sh  _run_collect_v2.sh  _smoke_obs_test.sh  check_task_status.py  collect_demos.sh  evaluate.sh  evaluate_ood.sh  integration_test.sh  plot_training.py  record_demo.sh  replay_policy.sh  run_demo_session.sh  scripted_pickplace.py  scripted_teleop.py  setup_ros2_wsl.sh  synthetic_demo.py  train.py  train_bc_on_real_demos.py
src/il_pipeline/dataset/: frame_validator.py
src/il_pipeline/inference/: normaliser.py  policy_loader.py
src/il_pipeline/nodes/: data_logger_node.py  inference_node.py  pybullet_robot_node.py
src/il_pipeline/training/: policy_factory.py  train.py
src/il_pipeline/web_api/: app.py  ros_bridge.py
tests/: conftest.py  test_bc_policy.py  test_frame_validator.py  test_lerobot_torch_dataset.py  test_lerobot_writer.py  test_normaliser.py
